--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,10 +14,11 @@
 *{ margin: 0;padding: 0;box-sizing: border-box; /* limita os elementos na borda da caixa*/font-family: 'Roboto', sans-serif;}
 
 body {
-  height          : 100%;
+  height          : 200%;
   width           : 100%;
   overflow-x      : hidden;
   background-color: var(--preta);
+  z-index: 1;
 }
 
 div {   
@@ -180,6 +181,18 @@ cursor     : pointer;
 
 .containercad {
   display: none;
+  position: absolute;
+  margin-top: 7%;
+  z-index: 2;
+}
+
+.content i {
+  position: absolute;
+  margin-left: 85%;
+  margin-top: 1px;
+  cursor: pointer;
+  background-color: #fff;
+  z-index: 2;
 }
 
 .containercad a{
