--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -48,10 +48,76 @@ cursor: pointer;
     color: #ff6d6d;
 }
 
-h1 {
+.box_dashboard p {
     color: #CCC;
     font-size: 60px;
-    margin: 200px auto;
+    margin: 100px auto;
     text-align: center;
     font-family: Arial;
 }
+
+  /* inclui toda a área de aviso, titulo e corpo */
+  .quadro_de_aviso {
+    background-color: #f3f3f3;
+    box-shadow: 0 2px 6px rgba(50, 50, 50,.5);
+    width: 80%; 
+    border-radius: 5px;
+    margin-bottom: 80%;
+    margin-left: 10%;
+    display: none;
+    position: absolute
+  }
+  /* barra superior em azul */
+  .aviso_titulo {
+    background-color: #53a7ea;
+    font-size: 25px;
+    color: white;
+    height: 32px;
+  }
+  .aviso_titulo p {
+    float: left;
+    padding: 3px 0 0 10px;   
+      padding-top: 0px;
+      padding-bottom: 0px;
+      margin-bottom: 0px;
+      margin-top: 3px;
+  }
+  /* edita e posiciona o "x" que fecha o quadro */
+  .aviso_fechar {
+    background-color: rgba(50,50,50,.3);
+    text-decoration: none;
+    float: right;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    padding: 2px 8px;
+    margin: 2px;
+    box-shadow: 0 0 1px black;
+  }
+  .aviso_fechar:hover {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  /* corpo do aviso */
+  .aviso_corpo {
+    padding: 10px;
+  }
+
+  .exclui_container{ display: flex;
+    align-items: center;
+    justify-content: center;}
+
+.exclui_container input[type="submit"] {
+    width: 350px;
+    padding: 15px 20px;
+    border: 1px solid #eee;
+    border-radius: 6px;
+    background-color: #ff6d6d;
+    font-size: 18px; 
+    cursor: pointer;   
+    color: white;
+    margin-top: 5px;
+}
+
+.exclui_container input[type="submit"]:hover{background-color: #f34d4d;}
