--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -65,7 +65,7 @@ table, td, th {
 table {
   border-collapse: collapse;
   width: 100%;
-  margin: 20px 0px ;
+  margin-top: 20px;
 }
 
 table input[type="submit"] {  background  : #28d;
